Fix request #29219: Missing margin between embedded doc title and content when there's no project background

--- a/plugins/document/themes/_embedded-document.scss
+++ b/plugins/document/themes/_embedded-document.scss
@@ -27,6 +27,7 @@
 
     > .document-header {
         flex: 0 0 auto;
+        padding: var(--tlp-large-spacing) var(--tlp-medium-spacing) var(--tlp-medium-spacing);
     }
 }
 
